	* Fixed class field access problem (Test case 98)
	  (Severity: medim; Security impact: none)
	* Refactored Information Object Classes parsing.
	* Refactored Parameterization support.
	* [typedef enum foo {}] foo_e; is now e_foo, see #1287989
	* Refactored ValueSetTypeAssignment parsing.
	* First release of PER encoder (does not encode SETs yet).

0.9.20:	2006-Mar-06

	* SET OF CHOICE, SEQUENCE OF CHOICE and a certain named S/O types
	  are represented differently in XER. THIS IS AN INCOMPATIBLE CHANGE.
	  (Test case 70) (Severity: low; Security impact: low)
	* asn1c: Removed -ftypes88 command line option.
	* Started PER implementation. Somewhat experimental!

0.9.19:	2005-Oct-06

	* A proper solution to circular references. No kludge flags
	  should be necessary anymore to produce reference-free code:
	  recursive dependencies are resolved automatically.
	* Test cases 73 & 92 keep track of various circular references.
	* Introduced compiler directives to allow finer control over the
	  generated code ("--<ASN1C...>--" in comments), (Test case 93).
	* New feature for unber(1): -s <skip> bytes.
	* Mandatory elements map for SET was not getting generated properly.
	  (Test case 94) (Severity: high; Security impact: low)
	* asn1c: new command line option: -fskeletons-copy.

0.9.18:	2005-Aug-14

	* The obsolete X.208 syntax is handled gracefully now (compound types'
	  member names are invented on the fly). (Test case 87).
	* Generating enumeration tables for INTEGER types (Test case 88).
	* Generating enumeration tables for BIT STRING types (Test case 89).
	* Conditional INTEGER/ENUMERATED representation: long vs. INTEGER_t
	  type is chosen based on PER visible constraints (Test cases 90, 91).
	* Union structures for CHOICE type are not anonymous anymore.
	* Made unber(1) program more verbose: effective structure length is
	  now displayed as L="<n>" at the closing tag. (Test check-xxber.sh).
	* Fixed unber(1)'s -1 switch for indefinite encoding length.